# microservices-expedition

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: gating.yaml
api_gateway/: Dockerfile  __init__.py  api_gateway.py  pyproject.toml
api_gateway/tests/: test_api_gateway.py
conf/: rabbitmq.conf
services/product_service/: Dockerfile  __init__.py  product_service.py  pyproject.toml
services/product_service/tests/: test_product_service.py
services/user_service/: Dockerfile  __init__.py  pyproject.toml  user_service.py
services/user_service/tests/: test_user_service.py
